--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,4 @@
-//Bigdoc disease diagnosis
+//wikipedia-symptoms disease diagnosis
 
 doctype
 html(ng-app='bigdoc-app', lang='en-US')
@@ -25,8 +25,8 @@ head
 		div.container
 			div.row
 				div.col-sm-12.col-md-12.col-lg-3
-					h3.text-center BigDoc disease diagnosis
-					h5 Bigdoc is a simple <strong>word-count</strong> algorith applied to disease diagnosis. Bear mind that this is highly experimental, do <strong>not</strong> use this to self-medicate!
+					h3.text-center <strong>wikipedia-symptoms</strong> disease diagnosis
+					h5 This is a simple <strong>word-count</strong> algorith applied to disease diagnosis. Bear mind that this is highly experimental, do <strong>not</strong> use this to self-medicate!
 					h5 Write your symptoms here as if you were talking to a doctor:
 					div.form-group
 						textarea#symptoms.form-control.margin-top-10(placeholder="Example for 'hyperthyroidism': I have a very high pulse rate and high temperature.")
@@ -48,7 +48,7 @@ head
 					p
 						input#ex1(data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14" style='display: none;')
 					div#progressBar
-					h5 Related article: <a href="http://adelriosantiago.com/gitblog/eng/bigdoc-wikipedia-healthcare">Diagnosing symptops using Wikipedia and wordclouds</a>
+					h5 Related article: <a href="http://adelriosantiago.com/gitblog/eng/wikipedia-healthcare">Diagnosing symptops using Wikipedia and wordclouds</a>
 				
 				div.col-sm-12.col-md-12.col-lg-9
 					div(class="panel panel-default margin-top-10" style='min-width: 800px;')
