--- a/views/index.jade
+++ b/views/index.jade
@@ -48,7 +48,7 @@ head
 					p
 						input#ex1(data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14" style='display: none;')
 					div#progressBar
-					h5 Related article: <a href="http://adelriosantiago.com/gitblog/eng/wikipedia-healthcare">Diagnosing symptops using Wikipedia and wordclouds</a>
+					h5 Related article: <a href="http://adelriosantiago.com/gitblog/eng/wikipedia-healthcare">Wikipedia, wordclouds and MongoDB to diagnose diseases
 				
 				div.col-sm-12.col-md-12.col-lg-9
 					div(class="panel panel-default margin-top-10" style='min-width: 800px;')
