--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ doctype
 html(ng-app='bigdoc-app', lang='en-US')
 head
 	meta(charset='UTF-8')
-	title BigDoc disease diagnosis
+	title Wordclouds, wikipedia and diseases
 	meta(name='description', content='Lorem Ipsum Dolor sit amet')
 	meta(name='keywords', content='foo, bar, baz')
 	meta(http-equiv='X-UA-Compatible', content='IE=edge')
